--- a/post.html
+++ b/post.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head id="header"></head>
+<head>
+    <script src="//code.jquery.com/jquery-1.10.2.js"></script>
+    <script>
+        $(function () {
+            $("#header").load("header.html");
+            $("#nav").load("navbar.html");
+            $("#footer").load("footer.html");
+        });
+    </script>
+    <div id="header"></div>
+</head>
 
 <body>
 
