--- a/about.html
+++ b/about.html
@@ -44,14 +44,14 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('img/about-bg.jpg')">
+    <header class="intro-header" style="background-image: url('img/ireland.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="page-heading">
                         <h1>Sobre Mim</h1>
                         <hr class="small">
-                        <span class="subheading">This is what I do.</span>
+                        <span class="subheading">Isto é o que eu faço.</span>
                     </div>
                 </div>
             </div>
@@ -62,9 +62,19 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe nostrum ullam eveniet pariatur voluptates odit, fuga atque ea nobis sit soluta odio, adipisci quas excepturi maxime quae totam ducimus consectetur?</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius praesentium recusandae illo eaque architecto error, repellendus iusto reprehenderit, doloribus, minus sunt. Numquam at quae voluptatum in officia voluptas voluptatibus, minus!</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum molestiae debitis nobis, quod sapiente qui voluptatum, placeat magni repudiandae accusantium fugit quas labore non rerum possimus, corrupti enim modi! Et.</p>
+                <p>Brasileira, Solteira, 25 anos</p>
+                <p>Av. Carlos Orlando Carvalho, 685 Apt. 201</p>
+                <p>Jardim da Penha – Vitória – Espírito Santo</p>
+                <p>Telefone: 027-99887-6882 / E-mail: mlguimaraess@gmail.com</p>
+                <h3>FORMAÇÃO</h3>
+                <ul>Curso técnico em Geomática pelo Instituto Federal do Espírito Santo (Concluído em Julho de 2010);</ul>
+                <ul>Curso superior em Bacharelado em Sistemas de Informação pelo Instituto Federal do Espírito Santo (Em andamento desde 2011/1).</ul>
+                <h3>EXPERIÊNCIA PROFISSIONAL</h3>
+                <ul>1 ano – Polícia Militar do Espírito Santo (2006)</ul>
+                <p>Cargo: Estagiária</p>
+                <p>Principais atividades: Arquivar Documentos, Atender telefone, Entregar documentos, Digitar Documentos, entre outras.</p>
+
+                <p>3 meses – Secretaria Municipal de Saúde da Prefeitura Municipal de Vitória (2010) Cargo: Estagiária Técnica Principais atividades: Fazer manutenção de banco de dados, Usar o software ArcGis 9.3 - ESRIpara criar ou editar mapas dos casos de dengue relativos ao ano de 2009 e início de 2010.  7 meses – Sistema Integrado de Bases Geoespaciais do Estado do Espírito Santo (GEOBASES) (2010) Cargo: Estagiária Técnica Principais atividades: Fazer manutenção de banco de dados, Usar o software ArcGis 9.3 - ESRIpara criar ou editar mapas e seus respectivos dados, Criar planilhas de excel e/ou arquivos de Power Point para apresentações em reuniões, Arquivar Documentos, Digitar Documentos, entre outras. 6 meses – Laboratório de Extensão em Desenvolvimento de Software (LEDS) (2015-2016)Cargo: Estagiária Principais Atividades: Uso da metodologia Scrum, Uso de Canvas (PMC e Value Proposition), Desenvolvimento de Aplicativo no front-end com uso dos frameworks Ionic e AngularJS, dentre outras. 8 meses – Conexos (2016)Cargo: Estagiária Principais Atividades: Dentro da metodologia Scrum, era responsável pela construção de telas para o sistema web da empresa. Uso da linguagem JavasScript e do framework AngularJS.</p>
             </div>
         </div>
     </div>
