--- a/about.html
+++ b/about.html
@@ -62,19 +62,29 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <p>Brasileira, Solteira, 25 anos</p>
-                <p>Av. Carlos Orlando Carvalho, 685 Apt. 201</p>
-                <p>Jardim da Penha – Vitória – Espírito Santo</p>
-                <p>Telefone: 027-99887-6882 / E-mail: mlguimaraess@gmail.com</p>
+                <p> Brasileira, Solteira, 25 anos
+                    Av. Carlos Orlando Carvalho, 685 Apt. 201
+                    Jardim da Penha – Vitória – Espírito Santo
+                    Telefone: 027-99887-6882 / E-mail: mlguimaraess@gmail.com</p>
                 <h3>FORMAÇÃO</h3>
-                <ul>Curso técnico em Geomática pelo Instituto Federal do Espírito Santo (Concluído em Julho de 2010);</ul>
-                <ul>Curso superior em Bacharelado em Sistemas de Informação pelo Instituto Federal do Espírito Santo (Em andamento desde 2011/1).</ul>
+                <h4>Curso técnico em Geomática pelo Instituto Federal do Espírito Santo (Concluído em Julho de 2010);</h4>
+                <h4>Curso superior em Bacharelado em Sistemas de Informação pelo Instituto Federal do Espírito Santo (Em andamento desde 2011/1).</h4>
                 <h3>EXPERIÊNCIA PROFISSIONAL</h3>
-                <ul>1 ano – Polícia Militar do Espírito Santo (2006)</ul>
-                <p>Cargo: Estagiária</p>
-                <p>Principais atividades: Arquivar Documentos, Atender telefone, Entregar documentos, Digitar Documentos, entre outras.</p>
-
-                <p>3 meses – Secretaria Municipal de Saúde da Prefeitura Municipal de Vitória (2010) Cargo: Estagiária Técnica Principais atividades: Fazer manutenção de banco de dados, Usar o software ArcGis 9.3 - ESRIpara criar ou editar mapas dos casos de dengue relativos ao ano de 2009 e início de 2010.  7 meses – Sistema Integrado de Bases Geoespaciais do Estado do Espírito Santo (GEOBASES) (2010) Cargo: Estagiária Técnica Principais atividades: Fazer manutenção de banco de dados, Usar o software ArcGis 9.3 - ESRIpara criar ou editar mapas e seus respectivos dados, Criar planilhas de excel e/ou arquivos de Power Point para apresentações em reuniões, Arquivar Documentos, Digitar Documentos, entre outras. 6 meses – Laboratório de Extensão em Desenvolvimento de Software (LEDS) (2015-2016)Cargo: Estagiária Principais Atividades: Uso da metodologia Scrum, Uso de Canvas (PMC e Value Proposition), Desenvolvimento de Aplicativo no front-end com uso dos frameworks Ionic e AngularJS, dentre outras. 8 meses – Conexos (2016)Cargo: Estagiária Principais Atividades: Dentro da metodologia Scrum, era responsável pela construção de telas para o sistema web da empresa. Uso da linguagem JavasScript e do framework AngularJS.</p>
+                <h4>1 ano – Polícia Militar do Espírito Santo (2006)</h4>
+                <p> Cargo: Estagiária
+                    Principais atividades: Arquivar Documentos, Atender telefone, Entregar documentos, Digitar Documentos, entre outras.</p>
+                <h4>3 meses – Secretaria Municipal de Saúde da Prefeitura Municipal de Vitória (2010)</h4>
+                <p> Cargo: Estagiária Técnica
+                    Principais atividades: Fazer manutenção de banco de dados, Usar o software ArcGis 9.3 - ESRIpara criar ou editar mapas dos casos de dengue relativos ao ano de 2009 e início de 2010.</p>
+                <h4>7 meses – Sistema Integrado de Bases Geoespaciais do Estado do Espírito Santo (GEOBASES) (2010)</h4>
+                <p> Cargo: Estagiária Técnica
+                    Principais atividades: Fazer manutenção de banco de dados, Usar o software ArcGis 9.3 - ESRIpara criar ou editar mapas e seus respectivos dados, Criar planilhas de excel e/ou arquivos de Power Point para apresentações em reuniões, Arquivar Documentos, Digitar Documentos, entre outras.</p>
+                <h4>6 meses – Laboratório de Extensão em Desenvolvimento de Software (LEDS) (2015-2016)</h4>
+                <p> Cargo: Estagiária
+                    Principais Atividades: Uso da metodologia Scrum, Uso de Canvas (PMC e Value Proposition), Desenvolvimento de Aplicativo no front-end com uso dos frameworks Ionic e AngularJS, dentre outras.</p>
+                <h4>8 meses – Conexos (2016)</h4>
+                <p> Cargo: Estagiária
+                    Principais Atividades: Dentro da metodologia Scrum, era responsável pela construção de telas para o sistema web da empresa. Uso da linguagem JavasScript e do framework AngularJS.</p>
             </div>
         </div>
     </div>
