--- a/about.html
+++ b/about.html
@@ -51,7 +51,6 @@
                     <div class="page-heading">
                         <h1>Sobre Mim</h1>
                         <hr class="small">
-                        <span class="subheading">Isto é o que eu faço.</span>
                     </div>
                 </div>
             </div>
@@ -62,9 +61,9 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                <p> Brasileira, Solteira, 25 anos
-                    Av. Carlos Orlando Carvalho, 685 Apt. 201
-                    Jardim da Penha – Vitória – Espírito Santo
+                <p> Brasileira, Solteira, 25 anos <br>
+                    Av. Carlos Orlando Carvalho, 685 Apt. 201 <br>
+                    Jardim da Penha – Vitória – Espírito Santo <br>
                     Telefone: 027-99887-6882 / E-mail: mlguimaraess@gmail.com</p>
 
                 <h3>FORMAÇÃO</h3>
@@ -87,6 +86,34 @@
                 <h4>8 meses – Conexos (2016)</h4>
                 <p> Cargo: Estagiária <br>
                     Principais Atividades: Dentro da metodologia Scrum, era responsável pela construção de telas para o sistema web da empresa. Uso da linguagem JavasScript e do framework AngularJS.</p>
+
+                <h3>EXPERIÊNCIA INTERNACIONAL</h3>
+                <h4>18 meses – Intercâmbio pelo Ciência Sem Fronteiras (Jan 2014/Jun 2015)</h4>
+                <p>Atrávez  do  programa  Ciência  Sem  Fronteiras,  morei  na  cidade  de  Waterford  na  Irlanda  por  18 meses. Neste período cursei 8 meses de curso de inglês seguidos de 10 meses no curso de BSc. Multimedia Applications Development no Waterford Institute of Technology.</p>
+
+                <h3>EXPERIÊNCIA PRÁTICA</h3>
+                <ul>
+                    <li>Sistema de Informação Geográfica (SIG): ArcGIS, QuantumGIS – Intermediário.</li>
+                    <li>Linguagem de programação Java – Básico.</li>
+                    <li>Linguagem SQL – Básico.</li>
+                    <li>Desenvolvimento WEB: CSS, HTML, JavaScript – Básico.</li>
+                    <li>Desenvolvimento mobile (Android): Adobe Flash Professional, Ionic e Angular JS.</li>
+                    <li>Modelagem de Processos BPMN: Bizagi – Básico.</li>
+                    <li>Modelagem UML – Básico.</li>
+                    <li>Pacote Office: Word, Power Point – Avançado</li>
+                    <li>Pacote Office: Excel - Intermediário</li>
+                </ul>
+
+                <h3>QUALIFICAÇÕES E ATIVIDADES COMPLEMENTARES</h3>
+                <ul>
+                    <li>Inglês: Inglês Wisdom, Waterford Institute of Technology - Fluente.</li>
+                    <li>Francês: Centro de línguas Ufes, Waterford Institute of Technology - Básico.</li>
+                    <li>Capa e Editoração do Referencial Informativo do Geobases para a edição 2011.</li>
+                </ul>
+
+                <h3>TRABALHOS COMPLETOS PUBLICADOS EM ANAIS DE CONGRESSO</h3>
+                <p> SILVA, M. L. G. ; MANTOVANELLI, E. C. ; ANDRADE, J. O. ; KOMATI, K. S. . Uma Aplicação baseada em SIG para Análise de Infrações Cometidas por Menores Infratores: Estudo de caso no Município de Vitória no estado do Espírito Santo. In: X Escola Regional de Banco de Dados (ERBD 2014), 2014, São Francisco do Sul/ SC. Anais do X Escola Regional de Banco de Dados (ERBD 2014), 2014.</p>
+
             </div>
         </div>
     </div>
