--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('img/dublin.jpg')">
+    <header class="intro-header" style="background-image: url('img/lakeCastle.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
@@ -69,28 +69,28 @@
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
                             <label>Nome</label>
-                            <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Por favor digite seu nome.">
+                            <input type="text" class="form-control" placeholder="Nome" id="name" required data-validation-required-message="Por favor digite seu nome.">
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
                             <label>Email</label>
-                            <input type="email" class="form-control" placeholder="Email Address" id="email" required data-validation-required-message="Por favor digite seu email.">
+                            <input type="email" class="form-control" placeholder="Email" id="email" required data-validation-required-message="Por favor digite seu email.">
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
                             <label>Telefone</label>
-                            <input type="tel" class="form-control" placeholder="Phone Number" id="phone" required data-validation-required-message="Por favor digite seu numero de telefone.">
+                            <input type="tel" class="form-control" placeholder="Telefone" id="phone" required data-validation-required-message="Por favor digite seu numero de telefone.">
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
                     <div class="row control-group">
                         <div class="form-group col-xs-12 floating-label-form-group controls">
                             <label>Mensagem</label>
-                            <textarea rows="5" class="form-control" placeholder="Message" id="message" required data-validation-required-message="Por favor digite sua mensagem."></textarea>
+                            <textarea rows="5" class="form-control" placeholder="Mensagem" id="message" required data-validation-required-message="Por favor digite sua mensagem."></textarea>
                             <p class="help-block text-danger"></p>
                         </div>
                     </div>
