--- a/footer.html
+++ b/footer.html
@@ -8,7 +8,7 @@
                     <a href="https://www.instagram.com/maluipod/?hl=pt-br">
                                 <span class="fa-stack fa-lg">
                                     <i class="fa fa-circle fa-stack-2x"></i>
-                                    <i class="fa instagram fa-stack-1x fa-inverse"></i>
+                                    <i class="fa fa-instagram fa-stack-1x fa-inverse"></i>
                                 </span>
                     </a>
                 </li>
