--- a/index.html
+++ b/index.html
@@ -44,14 +44,14 @@
 
     <!-- Page Header -->
     <!-- Set your background image for this header on the line below. -->
-    <header class="intro-header" style="background-image: url('img/waterfall.jpg')">
+    <header class="intro-header" style="background-image: url('img/orizzonte3.jpg')">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                     <div class="site-heading">
                         <h1>Blog da Malu</h1>
                         <hr class="small">
-                        <span class="subheading">Visão de uma aluna de TI sobre BDD, Desenvolvimento Ágil e outras coisas legais</span>
+                        <span class="subheading">Visão de uma aluna de TI sobre BDD, Desenvolvimento Ágil e outras coisas legais da TI.</span>
                     </div>
                 </div>
             </div>
