--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,8 @@
 
     <title>Blog da Malu</title>
 
+    <link rel="shortcut icon" href="paleta.ico" type="image/x-icon" />
+
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
