--- a/head.html
+++ b/head.html
@@ -10,7 +10,7 @@
 
     <title>Blog da Malu</title>
 
-    <link rel="shortcut icon" href="paleta.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/paleta.ico" type="image/x-icon" />
 
     <!-- Bootstrap Core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
