--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
             $("#footer").load("footer.html");
         });
     </script>
-    <div id="head"></div>
+    <head id="head"></head>
 </head>
 
 <body>
