--- a/post1.html
+++ b/post1.html
@@ -63,11 +63,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-                    <p>Algum blablabla...</p>
+                    <p>A proposta para este post era fazer uma reflexão envolvendo os assuntos: Testes (BDD e TDD), Padrões de Projeto e Codificação</p>
 
                     <h2 class="section-heading">Sistema de Controle de Temperatura</h2>
 
-		    <blockquote>O tempo passa rápido quando a gente se diverte - Andrade, Jefferson</blockquote>
+		    <blockquote>Padrão Observer: Utilizado quando se precisa manter os objetos atualizados quando algo importante ocorre.</blockquote>
 
                     <p>Some Text.</p>
 
@@ -79,7 +79,7 @@
 
 		    <h2 class="section-heading">Calculo do Imposto de Renda</h2>
 
-		    <blockquote>O tempo passa rápido quando a gente se diverte - Andrade, Jefferson</blockquote>
+		    <blockquote>Padrão Strategy: Ajuda a gerenciar toda uma complexidade imposta por lógicas condicionais.</blockquote>
 
                     <p>Some Text.</p>
 
@@ -91,7 +91,8 @@
 
                     <h2 class="section-heading">Sistema de Navegação</h2>
 
-		    <blockquote>O tempo passa rápido quando a gente se diverte - Andrade, Jefferson</blockquote>
+		    <blockquote>Padrão Interpreter: Estrutura que permite expansão e organização em situações onde existem regras de comportamento
+                <br>Padrão Chain of Responsability: Evitar o acoplamento do remetente de uma solicitação ao seu receptor. Encadear objetos receptores, passando a solicitação ao longo da cadeia até que um objeto a trate.</blockquote>
 
                     <p>Some Text.</p>
 
@@ -103,7 +104,7 @@
 
 		    <h2 class="section-heading">Calculadora Polonesa</h2>
 
-		    <blockquote>O tempo passa rápido quando a gente se diverte - Andrade, Jefferson</blockquote>
+		    <blockquote>Padrão MVC(Model View Control): Isolar o controle, a aplicação e o modelo. Fazendo com que o usuário só tenha acesso a view e desconheça o comportamento interno.</blockquote>
 
                     <p>Some Text.</p>
 
